CSS: alignment fix - buy & sell prices with long name

--- a/src/components/Currency/c-currency.scss
+++ b/src/components/Currency/c-currency.scss
@@ -110,7 +110,7 @@ $currency-margin-small: 0 0 0.5rem;
         margin: 0;
         font-size: 1rem;
         font-weight: 500;
-        line-height: 1.5;
+        line-height: 1.65;
       }
     }
 
